# btc-sentiment-trade

./: .gitignore  Dockerfile  README.md  app.py  backtest.json  btc_data.csv  btc_price_data.csv  btc_sentiments.json  historical_data.py  joeys-tests.ipynb  prices.py  pyproject.toml  sams-stuff.ipynb  settings.json  strategy.py
.price_cache/: btc-usd.csv
price_caches/: keyless,True,BTC-USD,1501567200,1722492000,86400.csv
