[tool.poetry]
name = "btc-sentiment-trade"
version = "0.1.0"
description = "A Bitcoin Sentiment Analysis Trading Bot"
authors = ["Samuel Morris <53889741+dodobird181@users.noreply.github.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.9.2"
alpha-vantage = "^3.0.0"
pandas = "^2.2.2"
yfinance = "^0.2.43"
requests = "^2.32.3"
requests-cache = "^1.2.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
